# hum_rob_ws

./: 6dof_from_hip_control.sdf  frames_2023-10-15_00.09.33.gv
install/: local_setup.sh  setup.sh
install/four_dof/lib/four_dof/: joint_state_pub_node
install/four_dof/share/four_dof/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/four_dof/share/four_dof/cmake/: four_dofConfig.cmake
install/four_dof/share/four_dof/launch/: empty_world.launch.py  spawn.launch.py  urdf_viz.launch.py
install/four_dof/share/four_dof/meshes/: body_for_Sym.stl
install/four_dof/share/four_dof/rviz/: modified_4_dof.rviz  six_dof_rviz.rviz
install/four_dof/share/four_dof/urdf/: draft.urdf  draft2.urdf  draft2.xacro  rrbot.xacro  urdf.xacro
install/four_dof/share/{PROJECT_NAME}/meshes/: body_for_Sym.stl
install/four_dof/share/{PROJECT_NAME}/urdf/: draft.urdf
install/four_dof_bringup/share/four_dof_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/four_dof_bringup/share/four_dof_bringup/cmake/: four_dof_bringupConfig.cmake
install/six_dof/share/six_dof/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/six_dof/share/six_dof/cmake/: six_dofConfig.cmake  (+1 more)
log/: latest_build  latest_list
src/eight_dof/: CMakeLists.txt  package.xml
src/eight_dof/config/: controller_config.yaml
src/eight_dof/launch/: pos_control.launch.py  urdf_vis.launch.py
src/eight_dof/meshes/convex_hull/: chassis_no_batt.stl
src/eight_dof/rviz/: 8dof.rviz
src/eight_dof/src/: pos_control.cpp
src/eight_dof/urdf/: 8dof_from_hip.urdf  simplified_8dof_from_hip.urdf
src/four_dof/: CMakeLists.txt  package.xml
src/four_dof/launch/: urdf_viz.launch.py
src/four_dof/meshes/draft1/: left_foot.stl  right_foot.stl  right_front_knee_link.stl
src/four_dof/meshes/draft2/: right_foot.stl  right_front_knee_link.stl
src/four_dof/src/: joint_publisher.cpp
src/four_dof/urdf/: draft.urdf  draft2.urdf
src/four_dof_bringup/: CMakeLists.txt  package.xml
src/four_dof_bringup/config/: controller_configuration.yaml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lk_tech_motor_hardware_interface/: CMakeLists.txt  package.xml
src/log/: latest_build
src/six_dof/: CMakeLists.txt  package.xml
src/six_dof/launch/: urdf_vis.launch.py
src/six_dof/log/: latest_build
src/six_dof/meshes/: Chassis.stl  leftfoot.stl
src/six_dof/rviz/: six_dof_fixed.rviz
src/six_dof/src/: IK_test.cpp
src/six_dof/urdf/: 6dof.urdf  6dof_fixed.urdf  6dof_from_hip.urdf  6dof_from_hip_control.urdf  6dof_from_hip_fixed.urdf  6dof_test.urdf  simplified_6dof_from_hip_control.urdf
src/six_dof_bringup/: CMakeLists.txt  package.xml
src/six_dof_bringup/config/: controller_config.yaml
src/six_dof_bringup/launch/: pos_control.launch.py  sim.launch.py
src/six_dof_bringup/src/: forward_step.cpp  pos_control.cpp
(+34 files in other folders)
